--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             currentPlayer: "X",
             status: "waiting", // Room is waiting for the second player
             winner: null,
+            gameActive: true,
           });
         setupRoom(roomId);
         status.textContent = `Room ID: ${roomId} - Waiting for player...`;
